[gd_scene load_steps=23 format=3 uid="uid://d0wgx0cytefyj"]

[ext_resource type="Texture2D" uid="uid://dylptgvtlyr76" path="res://asset/tile_test.png" id="1_opalr"]
[ext_resource type="Script" path="res://scripts/core/game_manager.gd" id="1_xqyqv"]
[ext_resource type="Texture2D" uid="uid://c5h255cmaykkl" path="res://asset/tile_test_highlight.png" id="3_jwhkn"]
[ext_resource type="Script" path="res://scripts/core/tile_manager.gd" id="3_uj6dr"]
[ext_resource type="Script" path="res://scripts/core/fire_spell.gd" id="4_4u3d8"]
[ext_resource type="Texture2D" uid="uid://d2pq1kfgokh2e" path="res://asset/fire.png" id="4_qoln5"]
[ext_resource type="Texture2D" uid="uid://31prxkveee1b" path="res://asset/frame-Sheet.png" id="5_fdymo"]
[ext_resource type="Texture2D" uid="uid://c4vmbq4o283vm" path="res://asset/cooldown.png" id="7_67vuv"]
[ext_resource type="Script" path="res://scripts/core/summon_display.gd" id="8_6d0fk"]
[ext_resource type="Script" path="res://scripts/core/water_spell.gd" id="8_32qkn"]
[ext_resource type="Texture2D" uid="uid://bwburk0sacoxp" path="res://asset/water.png" id="8_lkice"]
[ext_resource type="Texture2D" uid="uid://c11i30qcmc08a" path="res://asset/left_arrow.png" id="9_mbauh"]
[ext_resource type="Texture2D" uid="uid://jk00fkjbaktw" path="res://asset/earth.png" id="9_tlvrq"]
[ext_resource type="Script" path="res://scripts/core/earth_spell.gd" id="10_ank46"]
[ext_resource type="Texture2D" uid="uid://uniakt3n6e2i" path="res://asset/summon.png" id="14_237hj"]
[ext_resource type="Script" path="res://scripts/core/summon_spell.gd" id="14_uxo20"]
[ext_resource type="Texture2D" uid="uid://c037y062dn5h2" path="res://asset/minion_test.png" id="15_f44ak"]
[ext_resource type="FontFile" uid="uid://c3y6mbq3sht5j" path="res://fonts/dpcomic.ttf" id="18_6kpsa"]
[ext_resource type="Texture2D" uid="uid://cb1n25ojjxe4f" path="res://asset/wall.png" id="19_fpjli"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gf75g"]
texture = ExtResource("1_opalr")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o86jr"]
texture = ExtResource("3_jwhkn")
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_iwy6e"]
sources/0 = SubResource("TileSetAtlasSource_gf75g")
sources/1 = SubResource("TileSetAtlasSource_o86jr")

[node name="GameManager" type="Node2D"]
script = ExtResource("1_xqyqv")

[node name="TileManager" type="TileMap" parent="."]
tile_set = SubResource("TileSet_iwy6e")
format = 2
layer_0/tile_data = PackedInt32Array(196621, 0, 0, 196622, 0, 0, 196624, 0, 0, 196623, 0, 0, 196625, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 327697, 0, 0, 327696, 0, 0, 327695, 0, 0, 327694, 0, 0, 327693, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 524305, 0, 0, 524304, 0, 0, 524303, 0, 0, 524302, 0, 0, 524301, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0)
script = ExtResource("3_uj6dr")

[node name="FireSpell" type="Node2D" parent="."]
position = Vector2(26, 157)
scale = Vector2(2, 2)
script = ExtResource("4_4u3d8")
metadata/_edit_group_ = true

[node name="Icon" type="Sprite2D" parent="FireSpell"]
texture = ExtResource("4_qoln5")

[node name="Frame" type="Sprite2D" parent="FireSpell"]
texture = ExtResource("5_fdymo")
hframes = 4

[node name="Timer" type="Timer" parent="FireSpell"]

[node name="Cooldown" type="Sprite2D" parent="FireSpell"]
visible = false
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(6, 6)
rotation = 3.14159
texture = ExtResource("7_67vuv")
centered = false

[node name="WaterSpell" type="Node2D" parent="."]
position = Vector2(64, 157)
scale = Vector2(2, 2)
script = ExtResource("8_32qkn")
metadata/_edit_group_ = true

[node name="Icon" type="Sprite2D" parent="WaterSpell"]
texture = ExtResource("8_lkice")

[node name="Frame" type="Sprite2D" parent="WaterSpell"]
texture = ExtResource("5_fdymo")
hframes = 4

[node name="Timer" type="Timer" parent="WaterSpell"]

[node name="Cooldown" type="Sprite2D" parent="WaterSpell"]
visible = false
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(6, 6)
rotation = 3.14159
texture = ExtResource("7_67vuv")
centered = false

[node name="EarthSpell" type="Node2D" parent="."]
position = Vector2(103, 157)
scale = Vector2(2, 2)
script = ExtResource("10_ank46")
metadata/_edit_group_ = true

[node name="Icon" type="Sprite2D" parent="EarthSpell"]
texture = ExtResource("9_tlvrq")

[node name="Frame" type="Sprite2D" parent="EarthSpell"]
texture = ExtResource("5_fdymo")
hframes = 4

[node name="Timer" type="Timer" parent="EarthSpell"]

[node name="Cooldown" type="Sprite2D" parent="EarthSpell"]
visible = false
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(6, 6)
rotation = 3.14159
texture = ExtResource("7_67vuv")
centered = false

[node name="SummonSpell" type="Node2D" parent="."]
position = Vector2(144, 157)
scale = Vector2(2, 2)
script = ExtResource("14_uxo20")
metadata/_edit_group_ = true

[node name="Icon" type="Sprite2D" parent="SummonSpell"]
scale = Vector2(0.86, 0.86)
texture = ExtResource("14_237hj")

[node name="Frame" type="Sprite2D" parent="SummonSpell"]
texture = ExtResource("5_fdymo")
hframes = 4

[node name="Timer" type="Timer" parent="SummonSpell"]

[node name="Cooldown" type="Sprite2D" parent="SummonSpell"]
visible = false
modulate = Color(1, 1, 1, 0.611765)
position = Vector2(6, 6)
rotation = 3.14159
texture = ExtResource("7_67vuv")
centered = false

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -1
position = Vector2(-146, -8.96373)
scale = Vector2(1, 1.03627)
color = Color(0.14902, 0.0941176, 0.14902, 1)
polygon = PackedVector2Array(144, -1, 144, 192, 320, 192, 320, -1)

[node name="MergeDisplay" type="HBoxContainer" parent="."]
offset_left = 208.0
offset_top = 155.0
offset_right = 250.0
offset_bottom = 169.0
theme_override_constants/separation = 0
script = ExtResource("8_6d0fk")

[node name="LeftArrow" type="Sprite2D" parent="."]
position = Vector2(261, 163)
texture = ExtResource("9_mbauh")

[node name="ShowResult" type="Sprite2D" parent="LeftArrow"]
position = Vector2(21, 0)
texture = ExtResource("15_f44ak")

[node name="TickManager" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
offset_left = 8.0
offset_top = 6.0
offset_right = 48.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("18_6kpsa")
text = "Tick: "

[node name="Wall" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(248, 116)
texture = ExtResource("19_fpjli")

[connection signal="timeout" from="FireSpell/Timer" to="FireSpell" method="_on_timer_timeout"]
[connection signal="timeout" from="WaterSpell/Timer" to="WaterSpell" method="_on_timer_timeout"]
[connection signal="timeout" from="EarthSpell/Timer" to="EarthSpell" method="_on_timer_timeout"]
[connection signal="timeout" from="SummonSpell/Timer" to="SummonSpell" method="_on_timer_timeout"]
[connection signal="timeout" from="TickManager" to="." method="_on_tick_manager_timeout"]
